Fix scrollbars to overlay body.

--- a/spider/assets/css/styles.css
+++ b/spider/assets/css/styles.css
@@ -112,3 +112,7 @@ footer {
   }
 }
 
+body {
+  overflow-y: overlay;
+}
+
